syntax = "proto3";
option go_package = "proto/";

message ClientRequestBatch {

  message SingleClientRequest {
    string message = 1;
  }

  int64 sender = 1;
  repeated SingleClientRequest requests = 2;
  string id = 3; // unique identifier
}

message ClientResponseBatch {
  message SingleClientResponse {
    string message = 1;
  }

  int64 receiver = 1;
  repeated SingleClientResponse responses = 2;
  string id = 3; // unique identifier
}